<resources>
    <string name="app_name">Poster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Poster</string>
    <string name="nav_header_subtitle">Copies messages from telegram channels</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sender_channel_id">Sender Channel Id</string>
    <string name="receiver_channel_name">From Channel</string>
    <string name="receiver_channel_api_key">Receiver Channel Api Key</string>
    <string name="receiver_channel_chat_id">Receiver Channel Chat Id</string>
    <string name="submit">Submit</string>
    <string name="retry">Retry</string>
    <string name="check_net_con">Check your internet connection</string>
    <string name="need_permission">Need Permission</string>
    <string name="need_permission_msg">We need these permission?</string>
    <string name="go_to_settings">Settings</string>
    <string name="alert">Alert</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open">Open Channel</string>
    <string name="description">send sms to telegram</string>
    <string name="telegram_package">org.telegram.messenger</string>
    <string name="restart">Restart</string>
    <string name="copy_links_only">Copy links only</string>
    <string name="convert_affiliate">Convert Affiliate and Post to channel</string>
    <string name="exclude_word">Exclude Word</string>
</resources>